# gen-query

./: .gitignore  404.html  README.md  config.example.yaml  index.html  pyproject.toml  sitemap.xml
assets/css/: styles.e7e310cb.css
assets/js/: 08007dc0.096cdf2d.js  08007dc0.379db0a9.js  0e384e19.198f7120.js  0e384e19.84b6d58f.js  1301.4aeba9a4.js  1513.e085439b.js  165.e3481deb.js  17896441.10ce4b38.js  1795.0598129e.js  1844.0a4637ff.js  19591874.47a82a18.js  19591874.82cfd3fb.js  1c93e70c.07a7379c.js  1c93e70c.291f7329.js  1e8715b7.ac73d491.js  2014.e6ec74ba.js  2130.376b7820.js  2237.b76fbc0c.js  2438.b9fbe5e7.js  253.6f10fa76.js  2555.02ff74b6.js  2665.123d3c7b.js  278e5ad3.22ad6ac9.js  278e5ad3.c66a0ef9.js  2f37da93.1912fade.js  2f37da93.3c41e19d.js  2f37da93.e6fbe44e.js  3049.563911d7.js  3088.dec6ad76.js  3436.57b2b50d.js  3592d2f2.0b79382f.js  3592d2f2.773c2567.js  3593.368723d2.js  3674.b90a9dff.js  3723.d4a0681b.js  384.67181367.js  3872.df4871b7.js  3923.93400b56.js  399.716603c6.js  4045.1e088a0a.js  (+99 more)
docs/: README.md  docusaurus.config.js  intro.html  package.json  sidebars.js
docs/api-reference/: async-genquery.html  callbacks.html  configuration.html  genquery.html  llm-adapters.html  logging.html  models.html  overview.html  pipeline.html  query-result.html
docs/core-concepts/: architecture.html  pipeline.html  query-result.html
docs/customization/: callbacks.html  custom-pipeline-stages.html
docs/databases/: supported-databases.html
docs/docs/: intro.md
docs/examples/: fastapi.html
docs/getting-started/: cli.html  installation.html  quick-start.html
docs/llm-adapters/: overview.html
docs/security/: overview.html
docs/usage/: async-api.html  configuration.html  (+4 more)
examples/: data.sql  quickstart_sqlite_charts.ipynb
genquery/: __init__.py  async_genquery.py  cli.py  config.py  genquery.py  logging.py
tests/: test_async_pipeline.py  test_config_and_cache.py  test_inspector.py  test_pipeline_and_public_api.py  test_ranker_planner.py  test_security_and_sql_helpers.py  test_streaming_executor.py
website/: docusaurus.config.js  package.json
(+71 files in other folders)
