[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genquery"
version = "0.1.0"
description = "AI-driven SQL query generation package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "sqlglot>=20.0.0",
    "polars>=0.20.0",
    "connectorx>=0.3.0",
    "openai>=1.0.0",
    "psycopg2>=2.9.10",
    "mysqlclient>=2.2.8",
    "oracledb>=3.4.2"
]