[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["genquery*"]
exclude = ["prompts*"]

[project]
name = "genquery"
version = "0.1.0"
description = "AI-driven SQL query generation package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "sqlglot>=20.0.0",
    "polars>=0.20.0",
    "connectorx>=0.3.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2>=2.9.10", "asyncpg>=0.29.0"]
mysql = ["mysqlclient>=2.2.8", "asyncmy>=0.2.9"]
mssql = ["pymssql==2.3.13", "aioodbc>=0.5.0"]
oracle = ["oracledb>=3.4.2"]
sqlite = ["aiosqlite>=0.19.0"]
all = ["genquery[postgres,mysql,mssql,oracle,sqlite]"]

[project.scripts]
genquery = "genquery.cli:main"
